WebKit handles text layout inconsistently depending on `list-style-type` https://bugs.webkit.org/show_bug.cgi?id=302099 <rdar://problem/164650313>

Reviewed by Antti Koivisto.

Outside list markers should not contribute to the min/max width (they are not even supposed to be here in IFC.)

Test: fast/lists/list-marker-outside-inside-flex-item.html

* LayoutTests/fast/lists/list-marker-outside-inside-flex-item-expected.html: Added.
* LayoutTests/fast/lists/list-marker-outside-inside-flex-item.html: Added.
* Source/WebCore/layout/formattingContexts/inline/IntrinsicWidthHandler.cpp:
(WebCore::Layout::IntrinsicWidthHandler::computedIntrinsicWidthForConstraint):

Canonical link: https://commits.webkit.org/304947@main